# wav2lipsync

./: README.md  config_model.py  main.py  pyproject.toml  requirements.txt  start_api.ps1  test_api.py
.github/workflows/: deploy-custom-ami-spot-ondemand.yml  deploy-ondemand-wav2lip-ec2-us-east-2.yml  deploy-spot-wav2lip-ec2-us-east-2.yml
.github/workflows/workflows/: deploy-spot-wav2lip-ec2-us-east-2.yml  terminate-spot-wav2lip-ec2-us-east-2.yml
model/: config_model.py
wav2lip/: __init__.py  audio.py  easy_functions.py  inference.py  install.py
