[project]
name = "wave2lipsync"
version = "0.1.0"
description = ""
authors = [
    {name = "Samriddha Chatterjee",email = "samriddhac.official@fake.local"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "basicsr (==1.4.2)",
    "batch-face (==1.4.0)",
    "dlib (==19.24.0)",
    "facexlib (==0.3.0)",
    "gdown (==4.7.1)",
    "gfpgan (==1.3.8)",
    "imageio-ffmpeg (==0.4.8)",
    "importlib-metadata (==6.8.0)",
    "librosa (==0.10.1)",
    "moviepy (==1.0.3)",
    "numpy (==1.26.1)",
    "opencv-python (==4.8.1.78)",
    "scipy (==1.11.3)",
    "torch (>=2.2.0,<2.5.0)",
    "torchvision (>=0.17.0,<0.20.0)",
    "torchaudio (>=2.2.0,<2.5.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]

[tool.poetry]
packages = [{include = "wave2lipsync", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
